test/modules/vass/use-depth.good
use-depth.chpl:21: error: symbol x is multiply defined
use-depth.chpl:37: note: also defined here
